small screens are cutting off the bottom now, css changes to try and fix * due to the way I used the iframe on the main page, it is difficult to test without publishing - must find a better way

--- a/embed/style.css
+++ b/embed/style.css
@@ -49,6 +49,7 @@ body {
   grid-template-rows: repeat(4, minmax(0, 1fr));
   /* grid-auto-rows: repeat(5, minmax(0, 1fr)); */
   /* background-color: var(--tirtary-color); */
+  max-height: 100%;
 }
 
 .roll__results_container {
@@ -89,14 +90,15 @@ body {
 #🎲🎲, #🎲 {
   width: 100%;
   height: 100%;
-  display: flex;
-  position: relative;
+  /* display: flex; */
+  /* position: relative; */
   /* white-space: pre-wrap; */
   /* font-size: 2.8vmin; */
   /* font-size: max(2.8vmin, 3rem); */
   /* justify-content: center; */
   align-items: center;
   box-sizing: border-box; 
+  border: 2px solid var(--button-color);
 }
 
 #🎲 {
@@ -109,13 +111,14 @@ body {
   color: var(--text-dark-color);
   font-size: larger;
   text-decoration: underline;
-  padding: 1em;
-  border: 2px solid var(--button-color);
+  /* padding: 1em; */
+  /* border: 2px solid var(--button-color); */
 }
 #🎲🎲 {
   grid-column: span 2;
   background-color: var(--background-tertiary-color);
-  padding: 1em;
+  font-size: smaller;
+  /* padding: 1em; */
   /* cursor: pointer; */
 }
 
